[package]
name = "uservpn-socks5"
version = "0.1.0"
authors = ["Jochen Kiemes <jochen@kiemes.de>"]

[dependencies]
log = "0.3"
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-timer = "0.1"
env_logger = "0.4"
trust-dns = { version = "0.9.2", default-features = false }
yaml-rust = "0.4"
clap = "2.28"
pool = "0.1.4"

[dev-dependencies]
curl = "0.4"
