[package]
name = "uservpn-socks5"
version = "0.1.0"
authors = ["Jochen Kiemes <jochen@kiemes.de>"]

[dependencies]
log = "0.3"
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-timer = "0.1"
env_logger = "0.4"
trust-dns-resolver = "^0.8"
yaml-rust = "0.4"
clap = "2.28"
pool = "0.1"
rust-ini = "0.10"
nom="3.2"
maplit = "1.0"
bytes = "0.4"

[dev-dependencies]
curl = "0.4"
