[package]
name = "uservpn-socks5"
version = "0.1.0"
authors = ["Jochen Kiemes <jochen@kiemes.de>"]

[dependencies]
socksv5_future = "0.2"
log = "0.3"
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-timer = "0.1"
env_logger = "0.4"
trust-dns-resolver = "^0.8"
yaml-rust = "0.4"
clap = "2.28"
pool = "0.1"
rust-ini = "0.10"
nom="3.2"
maplit = "1.0"
bytes = "0.4"
csv = "1.0.0-beta.5"

[dev-dependencies]
curl = "0.4"
